fix customize btn on mobile resolution

--- a/src/styles/cards-style.css
+++ b/src/styles/cards-style.css
@@ -194,17 +194,21 @@
     }
 
     .btn__container {
-        height: 40px;
         justify-content: center;
-        background: #D0FC60;
-        border-radius: 24px;
-        padding: 13px 0;
     }
 
     .btn__container > .btn__title {
         font-size: 14px;
         margin: 0;
         position: static;
+        height: 40px;
+        width: 100%;
+        border-radius: 24px;
+        padding: 13px 0;
+        background: #D0FC60;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .btn__container:hover .btn__title {
